@@ -2,10 +2,11 @@ package com.gregtechceu.gtceu.client.util;
 
 import com.gregtechceu.gtceu.api.capability.recipe.FluidRecipeCapability;
 import com.gregtechceu.gtceu.api.capability.recipe.ItemRecipeCapability;
-import com.gregtechceu.gtceu.api.recipe.GTRecipe;
 import com.gregtechceu.gtceu.api.recipe.content.Content;
-import com.gregtechceu.gtceu.api.recipe.ingredient.FluidIngredient;
+import com.gregtechceu.gtceu.api.recipe.kind.GTRecipe;
+import com.gregtechceu.gtceu.data.item.GTDataComponents;
 import com.gregtechceu.gtceu.utils.GTMatrixUtils;
+import com.gregtechceu.gtceu.utils.GTUtil;
 import com.gregtechceu.gtceu.utils.ResearchManager;
 
 import com.lowdragmc.lowdraglib.gui.util.DrawerHelper;
@@ -36,13 +37,14 @@ import net.minecraft.world.level.block.RenderShape;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.material.Fluid;
 import net.minecraft.world.phys.Vec3;
-import net.minecraftforge.api.distmarker.Dist;
-import net.minecraftforge.api.distmarker.OnlyIn;
-import net.minecraftforge.client.RenderTypeHelper;
-import net.minecraftforge.client.extensions.common.IClientFluidTypeExtensions;
-import net.minecraftforge.client.extensions.common.IClientItemExtensions;
-import net.minecraftforge.client.model.data.ModelData;
-import net.minecraftforge.fluids.FluidStack;
+import net.neoforged.api.distmarker.Dist;
+import net.neoforged.api.distmarker.OnlyIn;
+import net.neoforged.neoforge.client.RenderTypeHelper;
+import net.neoforged.neoforge.client.extensions.common.IClientFluidTypeExtensions;
+import net.neoforged.neoforge.client.extensions.common.IClientItemExtensions;
+import net.neoforged.neoforge.client.model.data.ModelData;
+import net.neoforged.neoforge.fluids.FluidStack;
+import net.neoforged.neoforge.fluids.crafting.SizedFluidIngredient;
 
 import com.llamalad7.mixinextras.injector.wrapoperation.Operation;
 import com.mojang.blaze3d.vertex.PoseStack;
@@ -75,7 +77,7 @@ public class RenderUtil {
             else return fluidTypeExtensions.getOverlayTexture();
         });
 
-        private static final ResourceLocation WATER_STILL = new ResourceLocation("minecraft", "block/water_still");
+        private static final ResourceLocation WATER_STILL = ResourceLocation.withDefaultNamespace("block/water_still");
 
         private final BiFunction<IClientFluidTypeExtensions, FluidStack, ResourceLocation> mapper;
 
@@ -140,8 +142,10 @@ public class RenderUtil {
                 pos);
     }
 
-    public static void vertex(Matrix4f pose, VertexConsumer vertexConsumer, float x, float y, float z,
-                              int r, int g, int b, int a, float u, float v, int overlayCoords, int lightOverlay,
+    public static void vertex(Matrix4f pose, VertexConsumer vertexConsumer,
+                              float x, float y, float z,
+                              int r, int g, int b, int a,
+                              float u, float v, int overlayCoords, int lightOverlay,
                               float v0, float v1, float v2) {
         /*
          * For future reference:
@@ -149,13 +153,12 @@ public class RenderUtil {
          * Change it, and it'll break and complain that you didn't fill all elements (even though you did).
          */
         vertexConsumer
-                .vertex(pose, x, y, z)
-                .color(r, g, b, a)
-                .uv(u, v)
-                .overlayCoords(overlayCoords)
-                .uv2(lightOverlay)
-                .normal(v0, v1, v2)
-                .endVertex();
+                .addVertex(pose, x, y, z)
+                .setColor(r, g, b, a)
+                .setUv(u, v)
+                .setOverlay(overlayCoords)
+                .setLight(lightOverlay)
+                .setNormal(v0, v1, v2);
     }
 
     public static Vector3f transformVertex(Vector3fc vertex, Direction direction,
@@ -183,14 +186,15 @@ public class RenderUtil {
         }
 
         var fluidContent = contents.stream()
-                .filter(content -> content.content instanceof FluidIngredient ingredient && !ingredient.isEmpty())
+                .filter(content -> content.content instanceof SizedFluidIngredient ingredient &&
+                        !ingredient.ingredient().hasNoFluids())
                 .findAny();
         if (fluidContent.isEmpty()) {
             return null;
         }
-        var ingredient = (FluidIngredient) fluidContent.get().content;
+        var ingredient = (SizedFluidIngredient) fluidContent.get().content;
 
-        var stacks = ingredient.getStacks();
+        var stacks = ingredient.getFluids();
         if (stacks.length == 0) {
             return null;
         }
@@ -285,7 +289,7 @@ public class RenderUtil {
                                                     ItemStack stack, int x, int y, int z, int seed) {
         if (!Screen.hasShiftDown()) return false;
 
-        ResearchManager.ResearchItem researchData = ResearchManager.readResearchId(stack);
+        ResearchManager.ResearchItem researchData = stack.get(GTDataComponents.RESEARCH_ITEM);
         if (researchData == null) return false;
 
         Collection<GTRecipe> recipes = researchData.recipeType().getDataStickEntry(researchData.researchId());
@@ -295,10 +299,10 @@ public class RenderUtil {
             // check item outputs first
             List<Content> outputs = recipe.getOutputContents(ItemRecipeCapability.CAP);
             if (!outputs.isEmpty()) {
-                ItemStack[] items = ItemRecipeCapability.CAP.of(outputs.get(0).content).getItems();
+                ItemStack[] items = ItemRecipeCapability.CAP.of(outputs.getFirst().content).getItems();
                 if (items.length > 0) {
                     ItemStack output = items[0];
-                    if (!output.isEmpty() && !ItemStack.isSameItemSameTags(output, stack)) {
+                    if (!output.isEmpty() && !GTUtil.isSameItemSameTags(output, stack)) {
                         originalMethod.call(entity, level, output, x, y, seed, z);
                         return true;
                     }
@@ -307,7 +311,7 @@ public class RenderUtil {
             // if there are no item outputs, try to find a fluid output
             outputs = recipe.getOutputContents(FluidRecipeCapability.CAP);
             if (!outputs.isEmpty()) {
-                FluidStack[] fluids = FluidRecipeCapability.CAP.of(outputs.get(0).content).getStacks();
+                FluidStack[] fluids = FluidRecipeCapability.CAP.of(outputs.getFirst().content).getFluids();
                 if (fluids.length != 0) {
                     FluidStack output = fluids[0];
                     if (!output.isEmpty()) {
