@@ -1,7 +1,7 @@
 package com.gregtechceu.gtceu.integration.map.xaeros.minimap.ore;
 
-import com.gregtechceu.gtceu.api.data.chemical.material.Material;
-import com.gregtechceu.gtceu.api.data.worldgen.ores.GeneratedVeinMetadata;
+import com.gregtechceu.gtceu.api.material.material.Material;
+import com.gregtechceu.gtceu.api.worldgen.ores.GeneratedVeinMetadata;
 
 import net.minecraft.client.Minecraft;
 
@@ -10,7 +10,7 @@ import lombok.Getter;
 public class OreVeinElement {
 
     @Getter
-    private GeneratedVeinMetadata vein;
+    private final GeneratedVeinMetadata vein;
     @Getter
     private final String name;
     @Getter
@@ -24,6 +24,6 @@ public class OreVeinElement {
     }
 
     public Material getFirstMaterial() {
-        return vein.definition().veinGenerator().getAllMaterials().get(0);
+        return vein.definition().value().veinGenerator().getAllMaterials().getFirst();
     }
 }
